--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -8,6 +8,7 @@ section.container#services2
 				li A 90-minute in-home or on-location consult
 				li A detailed follow-up Email from our meeting inclucding a summary of the consult and key recommendation
 			p.smallest.italic All programs include all consultation features.
+			p.green Select a category below for services offered
 	div.panelContainer.serviceInner.ease
 		div.package(ng-repeat="category in services")
 			div(ng-show="category.state")
@@ -37,20 +38,25 @@ section.container#services2
 				div.panel(ng-click="showProgram(0)",style="background-image:url('../dog1-low.jpg')").bg.ease
 					h1 Puppy
 					p.hideBottom
-						span(ng-hide="a") View Details
-						span(ng-show="a") Hide Details
+						span View Details
 			div.grid-third
 				div.panel(ng-click="showProgram(1)",style="background-image:url('../Ollie-low.jpg')").bg.ease
 					h1 Basic
 					p.hideBottom
-						span(ng-hide="b") View Details
-						span(ng-show="b") Hide Details
+						span View Details
 			div.grid-third
 				div.panel(ng-click="showProgram(2)",style="background-image:url('../Biggie1-low.jpg')").bg.ease
 					h1 Behavior
 					p.hideBottom
-						span(ng-hide="c") View Details
-						span(ng-show="c") Hide Details	
+						span View Details
+	div.policy
+		div.grid-half
+			p.small.bold.green Payment
+			p.smallest Payment for all services can be made at the time of your scheduled appointment. I take cash and checks only.
+		div.grid-half
+			p.small.bold.green Cancellation Policy
+			p.smallest Cancellations require 48-hour notice to change your reservation or cancel for a full refund.
+
 section.pageEnd
 	figure.banner#servicesEnd(style="background-image:url('../Maysie4-standard.jpg')").bg
 		div
