--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -4,8 +4,8 @@ section#homeCover.splash.bg(style="background-image:url('../homeCover-low.jpg')"
 		img(src="logoDog1-low.png")#logoDog1
 		img(src="logoDog2-low.png")#logoDog2
 		img(src="logoDog3-low.png")#logoDog3
-	div(style="top:auto;bottom:4%")
-		h1: span.glyphicon.glyphicon-chevron-down(ng-click="moveDown()")
+	div(style="top:auto;bottom:4%").hideBottom
+		h1: span.glyphicon.glyphicon-chevron-down(ng-click="moveDown()").ease
 section#customer
 	h1.title Customer Testimonials
 	p.small check out what people have to say about us.
