--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,7 @@ body{
   font-family:"Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   opacity:0;
+  -webkit-overflow-scrolling:touch;
 }
 h1,h2,p,li{
   line-height:1.1;
@@ -55,7 +56,6 @@ h2{
   font-size:1.25em;
 }
 button{
-  height:44px;
   color:#1BA39C;
   background:transparent;
   font-size:16px;
@@ -159,7 +159,7 @@ input:focus, textarea:focus{
   padding:0 20px;
   margin-bottom:20px;
 }
-.panelContainer:last-child{
+.grid-half:last-child{
   margin-bottom:100px;
 }
 .panel{
@@ -239,7 +239,6 @@ footer .grid-third:last-child{
   font-weight:700;
 }
 .title{
-  margin-top:77px;
   color:#1BA39C;
 }
 .small{
@@ -269,7 +268,7 @@ footer .grid-third:last-child{
 
 .invisible{
   /*top:-100% !important;*/
-  visibility:hidden !important;
+  display:none !important;
 }
 .hideBottom{
   bottom:0 !important;
@@ -313,16 +312,12 @@ footer .grid-third:last-child{
 nav{
   position:fixed;
   top:0;
-  left:50%;
   color:#1BA39C;
   width:100%;
   height:77px;
   z-index:100;
+  overflow:hidden;
   /*border-bottom:solid 1px;*/
-  -webkit-transform: translate(-50%, 0%);
-  -moz-transform: translate(-50%, 0%);
-  -ms-transform: translate(-50%, 0%);
-  -o-transform: translate(-50%, 0%);
 }
 nav.seeThrough:after{
   position:absolute;
@@ -345,11 +340,24 @@ nav:after{
   background:#1BA39C;
   z-index: -1;
 }
+#menu{
+  position:absolute;
+  left:50%;
+  width:100%;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+}
 #menu,#menu li,#menu li a,#navContact{
   display:inline-block;
 }
+#menu li:first-child{
+  display:none;
+  font-size:30px;
+}
 #brand{
-  float:left;
+  position:absolute;
   display:table;
   width:172px;
   height:77px;
@@ -367,8 +375,13 @@ nav:after{
   line-height:75px;
   font-weight:700;
 }
+.showMenu{
+  display:block !important;
+  background:#f5f5f5;
+}
 #navContact{
-  float:right;
+  position:absolute;
+  right:0;
   height:77px;
   display:table;
   padding:0 20px;
@@ -384,6 +397,9 @@ nav:after{
 }
 #navContact a{
   line-height:22px;
+}
+#mobileMenu{
+  padding:15px;
 }
 #main{
   background:#f5f5f5;
@@ -541,10 +557,6 @@ footer .credit{
   top:-30%;
   opacity:1;
 }
-#customer{
-  width:840px;
-  margin:auto;
-}
 #customer .grid-half{
   vertical-align:top;
 }
@@ -557,7 +569,7 @@ footer .credit{
   border-radius:15px;
 }
 #customer .customerInfo{
-  padding:0 0 0 60px;
+  padding:0 0 0 20%;
   text-align:left;
   display:inline-block;
   vertical-align:middle;
@@ -630,9 +642,13 @@ footer .credit{
 #bio .panel .portraitRight .panel{
   padding: 0 0 0 30px;
 }
-
+#bio .portraitLeft{
+  display:inline-block;
+  margin:0;
+  width:50%;
+  float:none;
+}
 #philosophy .portraitLeft{
-  height:380px;
   overflow: hidden;
 }
 #philosophy ul{
@@ -960,9 +976,6 @@ footer .credit{
 #services2 #categoryInner .grid-third .mini{
   height:60px;
 }
-#services2 .policy{
-  margin-bottom:100px;
-}
 /*
  *  Contact Page
  */
@@ -976,7 +989,7 @@ footer .credit{
 }
 #contact .contactInfo .grid-half{
   width:50%;
-  height:100%;
+  height:150px;
   margin:0;
   float:none;
   vertical-align:middle;
@@ -985,6 +998,8 @@ footer .credit{
   height:100%;
 }
 #contact .contactInfo .grid-half:last-child .panel{
+  background-size:cover;
+  background-position:center center;
   position:relative;
   margin:0;
   padding:0;
@@ -999,8 +1014,10 @@ footer .credit{
   filter: blur(5px);
 }*/
 #contact .contactInfo{
-  height:150px;
   margin-bottom:20px
+}
+#contact form .grid-half:last-child{
+  margin-bottom:20px;
 }
 #contact form .formInput{
   margin-bottom:0;
@@ -1118,4 +1135,225 @@ textarea{
   background-size:cover;
   background-position:center center;
   background-attachment:fixed;
+}
+
+@media screen and (max-width:840px){
+  h1{
+    font-size:2em;
+  }
+  #brand,#navContact{
+    width:70px;
+    padding:0;
+  }
+  #brand img, #navContact div{
+    display:none;
+  }
+  #brand i, #navContact > div:last-child{
+    display:block !important;
+  }
+  .container{
+    width:95%;
+  }
+  footer{
+    width:100%;
+    padding:0 20px;
+  }
+  footer .grid-third:nth-child(odd){
+    width:35%;
+  }
+  footer .grid-third:nth-child(even){
+    width:20%;
+  }
+  #customer .customerInfo{
+    padding-left:15%;
+  }
+  #customer .panel:last-child{
+    padding-left:20px;
+  }
+  #services2 #categoryInner{
+    width:100%;
+  }
+  #services2 .serviceInner .package div .panel:last-child div{
+    width:100% !important;
+  }
+  #services2 .serviceInner .package div .panel:last-child figure{
+    display:block !important;
+    margin:auto;
+  }
+  #services2 .serviceInner .package > div > .panel{
+    text-align:center;
+  }
+  #services2 .package > div > .panel > h2 {
+    float:none !important;
+    display: block;
+  }
+  #services2 .package > div > .panel div{
+    float:none !important;
+  }
+  #services2  .price{
+    margin-top:20px;
+  }
+  #bio .portraitLeft{
+    float:left;
+    margin-right:30px;
+  }
+  #bio .panelContainer:first-child > .panel:last-child{
+    width:100% !important;
+    display:block !important;
+  }
+  #messageResult{
+    width:100%;
+  }
+}
+@media screen and (max-width:700px){
+  #homeLogo{
+    width:70%;
+  }
+  nav #menu ul li:nth-child(2){
+    display:none;
+  }
+  .splash figure:after{
+    background:white;
+  }
+  .grid-half{
+    width:70%;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:auto;
+  }
+  footer .grid-third{
+    width:222px !important;
+    float:none;
+    margin:auto;
+    display:block;
+  }
+  footer .grid-third:nth-child(3n+0){
+    float:none;
+    margin:auto;
+    margin-top:40px;
+  }
+  footer ul{
+    margin-left:0;
+  }
+  footer{
+    width:100%;
+    position:relative;
+  }
+  #footerSpace{
+    display:none;
+  }
+  #services2 .panelContainer .serviceIntro{
+    width:70%;
+    left:50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
+  #services2 .package .panel div > ul {
+    -webkit-columns: 1;
+    -moz-columns: 1;
+    columns: 1;
+  }
+  #video .grid-half{
+    width:100%;
+  }
+  #video .panelContainer{
+    height:300px !important;
+  }
+  #video .panelContainer h2, #video .panelContainer p{
+    bottom:5% !important;
+    width:70%;
+    font-size:100%;
+  }
+  .splash h1{
+    font-size:2.3em !important;
+  }
+  #contact .contactInfo .grid-half:first-child .panel{
+    padding:30px 0;
+  }
+  #contact form .panelContainer{
+    padding:0;
+  }
+  #contact form .panelContainer .panel{
+    padding: 20px 30px;
+  }
+}
+
+@media screen and (max-width:520px){
+  h1{
+    font-size:1.7em;
+  }
+  .grid-half{
+    width:90%;
+  }
+  #menu li:first-child{
+    display:block!important;
+  }
+  #menu li{
+    display:none;
+  }
+  #services2 .panelContainer .serviceIntro{
+    width:90%;
+  }
+  #services2 .panelContainer .serviceIntro:after {
+    opacity:0.9;
+  }
+  #services2 h1{
+    font-size:1.7em;
+  }
+  #services2 #categoryInner h1{
+    font-size:1.2em;
+  }
+  #services2 .price{
+    font-size:15px;
+    width:100px;
+  }
+  #services2 .panelContainer{
+    padding:0;
+  }
+  #philosophy .portraitLeft{
+    width:auto;
+    float:none;
+    margin:0;
+    border:none;
+  }
+  #youtube{
+    padding:20px 0 20px 10px;
+  }
+  #youtubeLogo{
+    height:45px;
+  }
+  #bio .portraitLeft, #bio .portraitRight{
+    width:100%;
+    float:none;
+    margin:0;
+    border-right:none;
+    border-left:none;
+    margin-bottom:20px;
+  }
+  #bio .panel .portraitRight .panel {
+    padding:0
+  }
+  .splash div:first-child{
+    bottom:5%;
+    top:auto;
+  }
+  .splash div:last-child{
+    bottom:0 !important;
+  }
+  #contact .contactInfo .grid-half{
+    width:100%;
+  }
+  #contact form .panelContainer .panel{
+    padding: 10px 30px;
+  }
+}
+@media screen and (max-width:400px){
+  .grid-half{
+    width:95%;
+  }
+  .panelContainer{
+    padding:0;
+  }
 }
