--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -6,7 +6,7 @@ section#homeCover.splash.bg(style="background-image:url('../homeCover-low.jpg')"
 		img(src="logoDog3-low.png")#logoDog3
 	div(style="top:auto;bottom:4%").hideBottom
 		h1: span.glyphicon.glyphicon-chevron-down(ng-click="moveDown()").ease
-section#customer
+section.container#customer
 	h1.title Customer Testimonials
 	p.small check out what people have to say about us.
 	div.grid-half
