--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype
 html(ng-app="myApp")
   head
+
     meta(charset='utf8')
+    meta(name="viewport",content="width=device-width,initial-scale=1.0,user-scalable=yes")
     base(href='/')
     title Dancing Tails Dog Training
     link(rel="icon", type="image/png", href="../favicon.ico")
